--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,9 @@ jobs:
   # Build job
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: docs
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -44,8 +47,7 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Install dependencies
-        run: |
-          cd docs
+        run: 
           yarn ci # or pnpm install / yarn install / bun install
       - name: Build with VitePress
         run: yarn run docs:build # or pnpm docs:build / yarn docs:build / bun run docs:build
